fix: resolve the mail sending

--- a/src/main/resources/templates/new_post.html
+++ b/src/main/resources/templates/new_post.html
@@ -12,12 +12,12 @@
     </style>
 </head>
 <body>
-    <h2>Novo post de <b th:text="${authorName}">authorName</b>!</h2>
-    <h1>Post: <b th:text="${postTitle}">postTitle</b> </h1>
+    <h3>Novo post de <b th:text="${authorName}">authorName</b>!</h3>
+    <h2>Post: <b th:text="${postTitle}">postTitle</b> </h2>
     <span class="in-line">
         <b th:text="${publishedAtDate}">publishedAtDate</b>
         ●
-        <b th:text="${publishedAtDate}">publishedAtTime</b>
+        <b th:text="${publishedAtTime}">publishedAtTime</b>
     </span>
     <p>Confira na integra!</p>
 </body>
